# omsrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PORT-PLAN-R1-audit-result.md  PORT-PLAN-v10-audit-result.md  PORT-PLAN-v2-audit-result.md  PORT-PLAN-v3-audit-result.md  PORT-PLAN-v3-audit.md  PORT-PLAN-v4-audit.md  PORT-PLAN-v6-audit-result.md  PORT-PLAN-v7-audit-result.md  PORT-PLAN-v7-audit.md  README.md  omspy-source-notes.md
.github/workflows/: ci.yml  release.yml
docs/: PORT-PLAN-R1-audit.md  PORT-PLAN-R10-audit-result.md  PORT-PLAN-R10-audit.md  PORT-PLAN-R2-audit-result.md  PORT-PLAN-R2-audit.md  PORT-PLAN-R3a-audit-result.md  PORT-PLAN-R3a-audit.md  PORT-PLAN-R3b-audit-result.md  PORT-PLAN-R3b-audit.md  PORT-PLAN-R4-audit-result.md  PORT-PLAN-R4-audit.md  PORT-PLAN-R5-audit-result.md  PORT-PLAN-R5-audit.md  PORT-PLAN-R6-audit-result.md  PORT-PLAN-R6-audit.md  PORT-PLAN-R7-audit-result.md  PORT-PLAN-R7-audit.md  PORT-PLAN-R8-audit-result.md  PORT-PLAN-R8-audit.md  PORT-PLAN-R9-audit-result.md  PORT-PLAN-R9-audit.md  PORT-PLAN-v0.2.md  PORT-PLAN-v10-audit.md  PORT-PLAN-v11-audit-result.md  PORT-PLAN-v11-audit.md  PORT-PLAN-v2-audit.md  PORT-PLAN-v4-audit-result.md  PORT-PLAN-v5-audit-result.md  PORT-PLAN-v5-audit.md  PORT-PLAN-v6-audit.md  PORT-PLAN-v8-audit-result.md  PORT-PLAN-v8-audit.md  PORT-PLAN-v9-audit-result.md  PORT-PLAN-v9-audit.md  PORT-PLAN.md  R12-async-complete-plan.md  audit-R11.1-codex-result.md  audit-R11.2-codex-result.md  audit-R11.3-codex-result.md  audit-R12-plan-codex-result.md  (+21 more)
rust-tests/: parity-item-manifest.txt
scripts/: parity_gate.sh
src/: async_broker.rs  async_compound_order.rs  async_order_strategy.rs  async_replica_broker.rs  async_virtual_broker.rs  broker.rs  brokers.rs  clock.rs  compound_order.rs  lib.rs  models.rs  order.rs  order_strategy.rs  parity_gate.rs  persistence.rs  replica_broker.rs  simulation.rs  utils.rs  virtual_broker.rs
tests/: parity_async.rs  parity_async_compound.rs  parity_async_order.rs  parity_async_replica.rs  parity_async_strategy.rs  parity_async_virtual.rs
tests/parity/: excused.toml  fixtures.rs  main.rs  mock_broker.rs  test_base.rs  test_compound_order.rs  test_models.rs  test_order.rs  test_order_strategy.rs  test_replica_broker.rs  test_simulation_models.rs  test_utils.rs  test_virtual_broker.rs
tests/parity_runner_smoke/: main.rs
tests/statistical/: main.rs
