[package]
name = "omsrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "Rust port of omspy — order management primitives"
repository = "https://github.com/wangschien/omsrs"

[features]
default = []
persistence = ["dep:rusqlite"]
statistical-tests = []

[dependencies]
rust_decimal = { version = "1.33", features = ["serde-str"] }
rust_decimal_macros = "1.33"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rand = { version = "=0.8", features = ["small_rng"] }
rand_distr = "=0.4"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[dev-dependencies]
proptest = "1.4"
pretty_assertions = "1.4"
libtest-mimic = "0.7"
toml = "0.8"

[[test]]
name = "parity"
path = "tests/parity/main.rs"
harness = false

[[test]]
name = "parity_runner_smoke"
path = "tests/parity_runner_smoke/main.rs"

[[test]]
name = "statistical"
path = "tests/statistical/main.rs"
harness = false
required-features = ["statistical-tests"]

[lints.rust]
warnings = "deny"
