[package]
name = "omsrs"
version = "0.3.1"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "Rust port of omspy — order management primitives"
repository = "https://github.com/wangschien/omsrs"

[features]
default = []
persistence = ["dep:rusqlite"]
statistical-tests = []

[dependencies]
rust_decimal = { version = "1.33", features = ["serde-str"] }
rust_decimal_macros = "1.33"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rand = { version = "=0.8", features = ["small_rng"] }
rand_distr = "=0.4"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
# R11.1 (v0.2): AsyncBroker trait needs async_trait for dyn-compatibility.
# Tiny, zero-runtime crate; added unconditionally so no feature gate is
# required at consumer sites.
async-trait = "0.1"
# R12.5+ (deepseek F2 fix): `Order::save_to_db_async` uses
# `tokio::task::spawn_blocking` to keep sync rusqlite calls off the
# Tokio reactor thread. Only the `rt` feature is needed (no
# multi-thread runtime spawn required for the helper itself —
# consumers bring their own runtime). Kept narrow on purpose.
tokio = { version = "1", features = ["rt"], default-features = false }

[dev-dependencies]
proptest = "1.4"
pretty_assertions = "1.4"
libtest-mimic = "0.7"
toml = "0.8"
# R11.2: async parity harness uses #[tokio::test] to mirror the sync
# R4 Paper test_base suite against AsyncPaper.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "rt"] }

[[test]]
name = "parity"
path = "tests/parity/main.rs"
harness = false

[[test]]
name = "parity_runner_smoke"
path = "tests/parity_runner_smoke/main.rs"

[[test]]
name = "statistical"
path = "tests/statistical/main.rs"
harness = false
required-features = ["statistical-tests"]

[lints.rust]
warnings = "deny"
